[tool.poetry]
name = "repl_nix_shoppingassistantchatgptplugin"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
quart-cors = "^0.6.0"
firebase-admin = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
